[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "0.0.1a"
license = {text = "MIT License"}
requires-python = ">= 3.10"
dependencies = [
    "rich",
    "loguru",
    "click",
    "pandas",
    "numpy"
]

[project.optional-dependencies]
dev = ["sphinx", "sphinxcontrib.katex", "sphinx_copybutton", "myst-parser", "pydata-sphinx-theme"]
all = ["sphinx", "sphinxcontrib.katex", "sphinx_copybutton", "myst-parser", "pydata-sphinx-theme"]

[project.scripts]
forge = "forge.__main__:cli"